[gd_scene load_steps=8 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Pixellari.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.635294 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 303.0
margin_top = 136.0
margin_right = 465.0
margin_bottom = 296.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 162.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 162.0
margin_bottom = 58.0
rect_min_size = Vector2( 10, 10 )

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 162.0
margin_bottom = 92.0
custom_colors/font_color_hover = Color( 0.345098, 0.780392, 0.298039, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
flat = true

[node name="Main Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 162.0
margin_bottom = 126.0
custom_colors/font_color_hover = Color( 0.298039, 0.741176, 0.780392, 1 )
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
flat = true

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 162.0
margin_bottom = 160.0
custom_colors/font_color_hover = Color( 0.780392, 0.298039, 0.298039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
